# QcNode

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  build-package.py
source/: CMakeLists.txt
source/Common/: Buffer.cpp  BufferManager.cpp  Buffer_Linux.cpp  Buffer_QNX.cpp  CMakeLists.txt  Image.cpp  Logger.cpp  Logger_Linux.cpp  Logger_QNX.cpp  Tensor.cpp
source/Infras/: CMakeLists.txt
source/Infras/Memory/: BufferDescriptor.cpp  CMakeLists.txt  CameraFrameDescriptor.cpp  DMABUFFAllocator.cpp  DMABUFFUtils.cpp  HeapAllocator.cpp  ImageDescriptor.cpp  ManagerLocal.cpp  PMEMAllocator.cpp  PMEMUtils.cpp  TensorDescriptor.cpp  UtilsBase.cpp  VideoFrameDescriptor.cpp
source/Infras/Memory/Utils/: BinaryAllocator.cpp  ImageAllocator.cpp  TensorAllocator.cpp
source/Infras/NodeTrace/: CMakeLists.txt  NodeTrace.cpp
source/Node/: CMakeLists.txt  DataTree.cpp  NodeBase.cpp
source/Node/Base/: CMakeLists.txt  DataTree.cpp  NodeBase.cpp  NodeFrameDescriptor.cpp  NodeFrameDescriptorPool.cpp
source/Node/CL2DFlex/: CL2DFlex.cpp  CL2DFlexConfig.cpp  CL2DFlexImpl.cpp  CL2DFlexImpl.hpp  CMakeLists.txt
source/Node/CL2DFlex/kernel/: CL2DConstant.cl.h  CL2DFlex.cl.h  CL2DPipelineConvert.cl.h  CL2DPipelineConvertUBWC.cl.h  CL2DPipelineLetterbox.cl.h  CL2DPipelineLetterboxMultiple.cl.h  CL2DPipelineRemap.cl.h  CL2DPipelineResize.cl.h  CL2DPipelineResizeMultiple.cl.h
source/Node/CL2DFlex/pipeline/: CL2DPipelineBase.cpp  CL2DPipelineBase.hpp  CL2DPipelineConvert.cpp  CL2DPipelineConvert.hpp  CL2DPipelineConvertUBWC.cpp  CL2DPipelineConvertUBWC.hpp  CL2DPipelineLetterbox.cpp  CL2DPipelineLetterbox.hpp  CL2DPipelineLetterboxMultiple.cpp  CL2DPipelineLetterboxMultiple.hpp  CL2DPipelineRemap.cpp  CL2DPipelineRemap.hpp  CL2DPipelineResize.cpp  CL2DPipelineResize.hpp  CL2DPipelineResizeMultiple.cpp  CL2DPipelineResizeMultiple.hpp
source/Node/Camera/: CMakeLists.txt  Camera.cpp  CameraConfig.cpp  CameraImpl.cpp  CameraImpl.hpp  CameraMonitor.cpp
source/Node/DepthFromStereo/: CMakeLists.txt  DepthFromStereo.cpp
source/Node/OpticalFlow/: CMakeLists.txt  OpticalFlow.cpp
source/Node/QNN/: CMakeLists.txt  QNN.cpp  QnnConfig.cpp  QnnImpl.cpp  QnnImpl.hpp  QnnMonitor.cpp
source/Node/Radar/: CMakeLists.txt  Radar.cpp
source/Node/Remap/: CMakeLists.txt  Remap.cpp  RemapConfig.cpp  RemapImpl.cpp  RemapImpl.hpp
source/Node/VideoDecoder/: CMakeLists.txt  VideoDecoder.cpp
source/Node/VideoEncoder/: CMakeLists.txt  VideoEncoder.cpp
source/Node/Voxelization/: CMakeLists.txt  Voxelization.cl.h  Voxelization.cpp  VoxelizationConfig.cpp  VoxelizationImpl.cpp  VoxelizationImpl.hpp  VoxelizationMonitor.cpp
source/common/: Buffer.cpp  BufferManager.cpp  Buffer_Linux.cpp  Buffer_QNX.cpp  CMakeLists.txt  Image.cpp  Logger.cpp  Logger_Linux.cpp  Logger_QNX.cpp  Tensor.cpp
source/components/: CMakeLists.txt  ComponentIF.cpp
source/components/C2D/: C2D.cpp  CMakeLists.txt
source/components/CL2DFlex/: CL2DFlex.cpp  CL2DPipelineBase.cpp  CL2DPipelineConvert.cpp  CL2DPipelineConvertUBWC.cpp  CL2DPipelineLetterbox.cpp  CL2DPipelineLetterboxMultiple.cpp  CL2DPipelineRemap.cpp  CL2DPipelineResize.cpp  CL2DPipelineResizeMultiple.cpp  CMakeLists.txt
source/components/CL2DFlex/include/: CL2DPipelineBase.hpp  CL2DPipelineConvert.hpp  CL2DPipelineConvertUBWC.hpp  CL2DPipelineLetterbox.hpp  CL2DPipelineLetterboxMultiple.hpp  CL2DPipelineRemap.hpp  CL2DPipelineResize.hpp  CL2DPipelineResizeMultiple.hpp
source/components/CL2DFlex/kernel/: CL2DConstant.cl.h  CL2DFlex.cl.h  CL2DPipelineConvert.cl.h  CL2DPipelineConvertUBWC.cl.h  CL2DPipelineLetterbox.cl.h  CL2DPipelineLetterboxMultiple.cl.h  CL2DPipelineRemap.cl.h  CL2DPipelineResize.cl.h  CL2DPipelineResizeMultiple.cl.h
source/components/Camera/: CMakeLists.txt  Camera.cpp
source/components/DepthFromStereo/: CMakeLists.txt  DepthFromStereo.cpp
source/components/GL2DFlex/: CMakeLists.txt  GL2DFlex.cpp
source/components/OpticalFlow/: CMakeLists.txt  OpticalFlow.cpp
source/components/PostCenterPoint/: CMakeLists.txt  PostCenterPoint.cpp
source/components/QnnRuntime/: CMakeLists.txt  QnnRuntime.cpp
source/components/Radar/: CMakeLists.txt  Radar.cpp
source/components/Remap/: CMakeLists.txt  Remap.cpp
source/components/VideoDecoder/: CMakeLists.txt  VideoDecoder.cpp
source/components/VideoEncoder/: CMakeLists.txt  VideoEncoder.cpp
source/components/Voxelization/: CMakeLists.txt  Voxelization.cl.h  Voxelization.cpp
source/libs/: CMakeLists.txt
source/libs/FadasIface/: CMakeLists.txt  FadasIface.h  FadasPlr.cpp  FadasPlr.hpp  FadasRemap.cpp  FadasRemap.hpp  FadasSrv.cpp  FadasSrv.hpp
source/libs/FadasIface/src/: FadasIfaceCore.cpp
source/libs/OpenclIface/: CMakeLists.txt  OpenclIface.cpp  OpenclIface.hpp
source/libs/VideoCodec/: CMakeLists.txt  VidcCompBase.cpp  VidcCompBase.hpp  VidcDrvClient.cpp  VidcDrvClient.hpp
source/nodes/: CMakeLists.txt  DataTree.cpp  NodeBase.cpp
source/nodes/CL2DFlex/: CL2DFlex.cpp  CMakeLists.txt
source/nodes/Camera/: CMakeLists.txt  Camera.cpp
source/nodes/DepthFromStereo/: CMakeLists.txt  DepthFromStereo.cpp
source/nodes/OpticalFlow/: CMakeLists.txt  OpticalFlow.cpp
source/nodes/QNN/: CMakeLists.txt  QNN.cpp
source/nodes/Remap/: CMakeLists.txt  Remap.cpp
source/nodes/VideoDecoder/: CMakeLists.txt  VideoDecoder.cpp
source/nodes/VideoEncoder/: CMakeLists.txt  VideoEncoder.cpp
source/nodes/Voxelization/: CMakeLists.txt  Voxelization.cpp
tests/unit_test/: CMakeLists.txt  gtest_RideHal.cpp
tests/unit_test/Infras/: CMakeLists.txt
tests/unit_test/Infras/Log/: CMakeLists.txt  gtest_Logger.cpp
tests/unit_test/Infras/Memory/: CMakeLists.txt  gtest_Memory.cpp  gtest_QCDMABUFFMemoryAllocator.cpp  gtest_QCMemoryManager.cpp  (+4 more)
tests/unit_test/Node/: CMakeLists.txt
tests/unit_test/buffer/: CMakeLists.txt  gtest_Buffer.cpp
tests/unit_test/components/: CMakeLists.txt
tests/unit_test/logger/: CMakeLists.txt  gtest_Logger.cpp
tests/unit_test/node/: CMakeLists.txt
tests/utils/: CMakeLists.txt  MockCLib.cpp  MockCLib.hpp  accuracy.hpp  md5_utils.cpp  md5_utils.hpp
(+364 files in other folders)
